<resources>
    <string name="app_name">Click\'n Coop</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mash">MASH</string>
    <string name="rythm">RYTHM</string>
    <string name="zero">0</string>
    <string name="Rythm_scoreJ1">0</string>
    <string name="Rythm_scoreJ2">0</string>
    <string name="Rythm_tempsJ1">00:10:00</string>
    <string name="Rythm_tempsJ2">00:10:00</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="fourth_fragment_label">fourth_fragment_label</string>
    <string name="tv_resultat">Voilà le résultat !</string>
    <string name="b_rejouer">REJOUER</string>
    <string name="b_menu">MENU</string>
    <string name="tv_modeDeJeu">Choisissez un mode de jeu</string>
    <string name="premier">1. 0</string>
    <string name="deuxieme">2. 0</string>
    <string name="troisieme">3. 0</string>

</resources>