<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/b2_cliqueJ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/BleuMarine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b1_cliqueJ1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_scoreJ1" />

    <Button
        android:id="@+id/b1_cliqueJ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/BleuMarine"
        app:layout_constraintBottom_toTopOf="@+id/tv_scoreJ2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b2_cliqueJ2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b2_cliqueJ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/BleuMarine"
        app:layout_constraintBottom_toTopOf="@+id/tv_scoreJ2"
        app:layout_constraintEnd_toStartOf="@+id/b1_cliqueJ2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b1_cliqueJ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b2_cliqueJ1"
        app:layout_constraintTop_toBottomOf="@+id/tv_scoreJ1" />

    <TextView
        android:id="@+id/tv_scoreJ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        android:text="@string/Rythm_scoreJ2"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_tempsJ2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1_cliqueJ2" />

    <TextView
        android:id="@+id/tv_scoreJ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rythm_scoreJ1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/b2_cliqueJ1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tempsJ1" />

    <TextView
        android:id="@+id/tv_tempsJ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/Rythm_tempsJ1"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_scoreJ1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tempsJ2" />

    <TextView
        android:id="@+id/tv_tempsJ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:digits="3"
        android:rotation="180"
        android:text="@string/Rythm_tempsJ2"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_tempsJ1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_scoreJ2" />

</androidx.constraintlayout.widget.ConstraintLayout>